--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Profile Readme Stats
         # You may pin to the exact commit or the version.
-        # uses: teoxoy/profile-readme-stats@82d1c3c663733644c424425e4efd0b6396c4126b
-        uses: teoxoy/profile-readme-stats@v1.2
+        uses: teoxoy/profile-readme-stats@82d1c3c663733644c424425e4efd0b6396c4126b
         with:
           # Personal access token with `read:user` scope and optional `repo` scope
           token: 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
